# Webinos-Platform

./: .gitignore  .project  package.json
API/: readme
API/AppLauncher/: readme
API/Attestation/: readme.proper
API/Authentication/: README.txt  readme  rpc_auth.js
API/Calendar/: readme
API/Contacts/: readme
API/Context/: readme
API/DeviceInteraction/: readme
API/DeviceOrientation/: readme
API/DeviceStatus/: pom.xml  readme
API/Discovery/: readme
API/Events/: readme
API/Gallery/: readme
API/Gelocation/: test
API/Geolocation/: geolocation_test.js  howto.txt  readme
API/MediaCapture/: readme
API/Messaging/: readme
API/NFC/: readme
API/Payment/: impl_payment.js  readme  readme.txt  rpc_payment.js
API/Sensors/: readme
API/TV/: readme
API/UserProfile/: readme
API/Vehicle/: readme
API/WebinosCore/: readme
API/Widget/: readme
GuiElements/demoPage/: dummy-page.html
PZ/: readme
RPC/: .project  0.txt  fileprovider.js  impl_file.js  md5.js  messagehandler.js  policy.xml  readme.txt  rpc.js  rpc_contacts.js  rpc_file.js  rpc_geolocation.js  rpc_sensors.js  rpc_servicedisco.js  rpc_test.js  rpc_test2.js  rpc_vehicle.js  webinos.dom.js  webinos.dom.rpc.js  webinos.events.js  webinos.file.js  webinos.file.rpc.js  webinos.fs.js  webinos.path.js  webinos.rpc.file.js  webinos.rpc.fs.js  webinos.utils.js  websocket_server.js  websocket_server_pzh.js  websocketserver.js  websocketserver_protocol_v7.js  websocketserver_protocol_v8.js
RPC/contacts_module/node_contacts_remote/standaloneCpp/: CMakeLists.txt  main.cpp
apps/: readme.md
demo/: README.md  build.xml  policy.xml  startFarm.js  startPzh.js  startPzp.js  websocket_server.js
doc/: INSTALL.txt
pzpxmpp/: GenericFeature.js  RemoteAlertFeature.js  nlogger.json  pzpxmpp.js  readme.txt  service.js  xmpp.js
src/: pom.xml
webinos/: dependencies.json  pom.xml
(+1034 files in other folders)
